--- a/views/visualMenuStructure.ejs
+++ b/views/visualMenuStructure.ejs
@@ -24,7 +24,7 @@
 
     <%if (locals.keyActive === "yes"){%>
         <div class="spaceIngredients">
-            <h3>Ingrendients: </h3>
+            <h3>Ingredients: </h3>
             <ul id="ingredientsList">
                 <li><%=locals.proteinName%>, <%=locals.proteinPreparation%></li>
             </ul>
